@@ -5,6 +5,9 @@
 ### Added
 - Extend the current single recipe post type to display additional fields.
 - Added placeholder image for recipes.
+- Added in a connections box to allows news posts and pages to be attached to workouts.
+- Added in a setting to allow the translation of the `plan` single slug.
+- Added in the exercise post type.
 
 ### Fixed
 - Added in a statement to to check a video exists before outputting the video play button.
